fixing trashcan issue

--- a/quix/index.html
+++ b/quix/index.html
@@ -60,7 +60,34 @@
               <div id="site-title-favourite-movies">Quix.</div>
               <h3>Your favourites</h3><span id="icon-container"><span id="edit-favourite-movies-icon" class="btn"></span></span>
               <span id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</span>
-              <div id="favourite-movies-list"></div>
+
+              <div id="favourite-movies-list">
+
+                <div class="list-flex-container">
+                  <div class="favourite-movie-li">
+                    <a class="favourite-movie-anchor" href="https://www.imdb.com/title/tt2316204/">Alien: CCovenantCovenantCovenantCovenantovenant (2017)<span class="favourites-list-rating-span"><i aria-hidden="true" class="fa fa-star"></i> 6.4</span></a></div>
+                  <div class="delete-span-container">
+                    <span class="delete-span"><i class="fas fa-trash"></i></span>
+                  </div>
+                </div>
+                <div class="list-flex-container">
+                  <div class="favourite-movie-li">
+                    <a class="favourite-movie-anchor" href="https://www.imdb.com/title/tt2316204/">Alien: Covenant (2017)<span class="favourites-list-rating-span"><i aria-hidden="true" class="fa fa-star"></i> 6.4</span></a></div>
+                  <div class="delete-span-container">
+                    <span class="delete-span"><i class="fas fa-trash"></i></span>
+                  </div>
+                </div>
+                <div class="list-flex-container">
+                  <div class="favourite-movie-li">
+                    <a class="favourite-movie-anchor" href="https://www.imdb.com/title/tt2316204/">Alien: Covenant (2017)<span class="favourites-list-rating-span"><i aria-hidden="true" class="fa fa-star"></i> 6.4</span></a></div>
+                  <div class="delete-span-container">
+                    <span class="delete-span"><i class="fas fa-trash"></i></span>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
               <button type="button" id="show-favourite-movies" class="btn">Show</button>
             </div>
           </div>
