centering issue list items favouirites

--- a/quix/index.html
+++ b/quix/index.html
@@ -65,21 +65,24 @@
 
                 <div class="list-flex-container">
                   <div class="favourite-movie-li">
-                    <a class="favourite-movie-anchor" href="https://www.imdb.com/title/tt2316204/">Alien: CCovenantCovenantCovenantCovenantovenant (2017)<span class="favourites-list-rating-span"><i aria-hidden="true" class="fa fa-star"></i> 6.4</span></a></div>
+                    <a class="favourite-movie-anchor" href="https://www.imdb.com/title/tt2316204/">Alien: CCovenantCovenantCovenantCovenantovenant (2017)<span class="favourites-list-rating-span"><i aria-hidden="true" class="fa fa-star"></i> 6.4</span></a>
+                  </div>
                   <div class="delete-span-container">
                     <span class="delete-span"><i class="fas fa-trash"></i></span>
                   </div>
                 </div>
                 <div class="list-flex-container">
                   <div class="favourite-movie-li">
-                    <a class="favourite-movie-anchor" href="https://www.imdb.com/title/tt2316204/">Alien: Covenant (2017)<span class="favourites-list-rating-span"><i aria-hidden="true" class="fa fa-star"></i> 6.4</span></a></div>
+                    <a class="favourite-movie-anchor" href="https://www.imdb.com/title/tt2316204/">Alien: Covenant (2017)<span class="favourites-list-rating-span"><i aria-hidden="true" class="fa fa-star"></i> 6.4</span></a>
+                  </div>
                   <div class="delete-span-container">
                     <span class="delete-span"><i class="fas fa-trash"></i></span>
                   </div>
                 </div>
                 <div class="list-flex-container">
                   <div class="favourite-movie-li">
-                    <a class="favourite-movie-anchor" href="https://www.imdb.com/title/tt2316204/">Alien: Covenant (2017)<span class="favourites-list-rating-span"><i aria-hidden="true" class="fa fa-star"></i> 6.4</span></a></div>
+                    <a class="favourite-movie-anchor" href="https://www.imdb.com/title/tt2316204/">Alien: Covenant (2017)<span class="favourites-list-rating-span"><i aria-hidden="true" class="fa fa-star"></i> 6.4</span></a>
+                  </div>
                   <div class="delete-span-container">
                     <span class="delete-span"><i class="fas fa-trash"></i></span>
                   </div>
