working guest upgrade

--- a/quix/index.html
+++ b/quix/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <meta charset="utf-8">
@@ -58,6 +58,26 @@
 <!--            <div id="-description-favourite-movies-container">-->
 <!--              <div id="description"></div>-->
 <!--            </div>-->
+            <hr>
+            <div id="convert-acc-container" class="hide">
+              <p id="convert-acc-description">
+                Do you want to keep using Quix? You can upgrade your account to a permanent one by pressing the button below. Any saved movies will transfer to your new account.
+              </p>
+              <button id="convert-acc-btn" class="btn">Upgrade account</button>
+              <div id="convert-acc-registration" class="hide">
+<!--                <form id="convert-acc-form">-->
+<!--                  <div class="input-box">-->
+<!--                    <input id="input-email" type="email" value="" required="" autocomplete="off">-->
+<!--                    <label>Username</label>-->
+<!--                  </div>-->
+<!--                  <div class="input-box">-->
+<!--                    <input id="input-pw" type="password"  value="" required="" autocomplete="off">-->
+<!--                    <label>Password</label>-->
+<!--                  </div>-->
+<!--                  <button class="btn" id="convert-acc-register" type="submit" onsubmit="convertAccount(event)" form="convert-acc-form">Register</button>-->
+<!--                </form>-->
+              </div>
+            </div>
             <hr>
             <div id="title-and-list-container">
               <div id="list-title">
