--- a/quix/index.html
+++ b/quix/index.html
@@ -13,8 +13,8 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <link rel="shortcut icon" href="favico.ico">
+  <link rel="apple-touch-icon" href="/quix/icon.png">
+  <link rel="shortcut icon" href="/quix/favicon.ico">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
