html meta tags and img handling

--- a/quix/index.html
+++ b/quix/index.html
@@ -4,17 +4,39 @@
 <head>
   <meta charset="utf-8">
   <title>Quix.</title>
-  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <!-- For Google -->
+  <meta name="description" content="A website that lets you conveniently browse movies and their IMDB-ratings. Additionally, you can save your favourites permanently and come back to them whenever you please!" />
+  <meta name="keywords" content="" />
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="../quix/icon.png">
-  <link rel="shortcut icon" href="../quix/favicon.ico">
+  <meta name="author" content="" />
+  <meta name="copyright" content="" />
+  <meta name="application-name" content="" />
+
+  <!-- For Facebook -->
+  <meta property="og:title" content="Quix - quickly search IMDB">
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://tbermalm.tech/quix/img/popcorn-1614707.png">
+  <meta property="og:url" content="https://tbermalm.tech/quix/" />
+  <meta property="og:description" content="A website that lets you conveniently browse movies and their IMDB-ratings. Additionally, you can save your favourites permanently and come back to them whenever you please!"/>
+
+  <!-- For Twitter -->
+  <meta name="twitter:card" content="Quix - quickly search IMDB" />
+  <meta name="twitter:title" content="Quix" />
+  <meta name="twitter:description" content="A website that lets you conveniently browse movies and their IMDB-ratings. Additionally, you can save your favourites permanently and come back to them whenever you please!" />
+  <meta name="twitter:image" content="https://tbermalm.tech/quix/img/popcorn-1614707.png" />
+
+  <!--tags from https://realfavicongenerator.net/-->
+  <link rel="apple-touch-icon" sizes="180x180" href="/quix/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/quix/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/quix/favicon-16x16.png">
+  <link rel="manifest" href="/quix/site.webmanifest">
+  <link rel="mask-icon" href="/quix/safari-pinned-tab.svg" color="#f4cb84">
+  <link rel="shortcut icon" href="/quix/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="/quix/browserconfig.xml">
+  <meta name="theme-color" content="#f4cb84">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
