--- a/quix/index.html
+++ b/quix/index.html
@@ -8,11 +8,9 @@
 
   <!-- For Google -->
   <meta name="description" content="A website that lets you conveniently browse movies and their IMDB-ratings. Additionally, you can save your favourites permanently and come back to them whenever you please!" />
-  <meta name="keywords" content="" />
-
-  <meta name="author" content="" />
+  <meta name="author" content="Tarek Bermalm" />
   <meta name="copyright" content="" />
-  <meta name="application-name" content="" />
+  <meta name="application-name" content="Quix." />
 
   <!-- For Facebook -->
   <meta property="og:title" content="Quix - quickly search IMDB">
@@ -37,6 +35,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="/quix/browserconfig.xml">
   <meta name="theme-color" content="#f4cb84">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -46,8 +45,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
-
-  <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
