--- a/quix/index.html
+++ b/quix/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="" xmlns="http://www.w3.org/1999/html">
+<html class="no-js" lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <meta charset="utf-8">
@@ -42,9 +42,8 @@
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
+  <link rel="preload" href="fonts/abel/Abel-Regular.ttf" as="font" crossorigin="anonymous" />
+  <link rel="preload" href="fonts/ubuntu/Ubuntu-Regular.ttf" as="font" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -115,7 +114,7 @@
         </div>
 
       <form id="search-form" method="get" name="search-form" autocomplete="off">
-        <input id="search-box" name="query" type="text" placeholder="Enter movie title..." autofocus><button  id="main-search-button" type="submit" class="btn"><i class="fa fa-search"></i></button>
+        <input id="search-box" name="query" type="text" placeholder="Enter movie title..." autofocus aria-label="Textfield for searching"><button  id="main-search-button" type="submit" class="btn" aria-label="Search"><i class="fa fa-search"></i></button>
       </form>
 
       <div id="loading-results" class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
