--- a/quix/index.html
+++ b/quix/index.html
@@ -43,7 +43,7 @@
   <link rel="preload" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css"></noscript>
 
-  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css"/>
+<!--  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css"/>-->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <link rel="preload" href="fonts/abel/Abel-Regular.ttf" as="font" crossorigin="anonymous" />
