--- a/quix/index.html
+++ b/quix/index.html
@@ -108,7 +108,7 @@
 
     <!--Main content: search bar and results-->
     <div id="main-content-container">
-      <div id="logo-container"><img src="img/popcorn-1614707.png" alt="Logo"></div>
+      <img id="logo" src="img/popcorn-1614707.png" alt="Logo">
 
         <div id="title-container">
           <span id="title">Quix.</span>
