--- a/quix/index.html
+++ b/quix/index.html
@@ -170,14 +170,14 @@
   <!--Firebase tags-->
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js" defer></script>
+  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js" ></script>
 
   <!-- Firebase products
        https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js" defer></script>
-  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js" defer></script>
-  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js" defer></script>
-  <script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js" defer></script>
+  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js" ></script>
+  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js" ></script>
+  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js" ></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js" ></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
