implemented landing page for root

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Work in progress...</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +25,16 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <article>
+    <div id="container">
+      <h1>Work in progress</h1>
+      <div>
+        <p>You'll have to sit tight for a minute. This page is a work in progress. In the meantime, you can contact me <a href="mailto:info@tbermalm.tech">here</a>.</p>
+        <p>&mdash; Tarek Bermalm</p>
+      </div>
+    </div>
+  </article>
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
