changed responsive handling of "your favourites" span

--- a/quix/index.html
+++ b/quix/index.html
@@ -59,7 +59,7 @@
       </div>
       <div id="db-toggle-container">
         <div id="db-styling-container" class="btn">
-          <span>Your favourites</span>
+          <span aria-label="Your favourites"></span>
         </div>
         <!-- content for favourite movies list -->
         <div id="favourite-movies-container" class="hide">
