--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="container">
       <h1>Work in progress</h1>
       <div>
-        <p>You'll have to sit tight for a minute. This page is a work in progress. In the meantime, you can contact me <a href="mailto:info@tbermalm.tech">here</a>.</p>
+        <p>Were you looking for <a href="https://tbermalm.tech/quix/">this</a>? If not, you'll have to sit tight for a minute. This page is a work in progress. In the meantime, you can contact me <a href="mailto:info@tbermalm.tech">here</a>.</p>
         <p>&mdash; Tarek Bermalm</p>
       </div>
     </div>
