setup of google analytics and google adsense

--- a/quix/index.html
+++ b/quix/index.html
@@ -46,6 +46,24 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <link rel="preload" href="fonts/abel/Abel-Regular.ttf" as="font" crossorigin="anonymous" />
   <link rel="preload" href="fonts/ubuntu/Ubuntu-Regular.ttf" as="font" crossorigin="anonymous" />
+
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', '260797366', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D9173EV99F"></script>
+
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-D9173EV99F');
+  </script>
+
+  <script data-ad-client="ca-pub-9398890138050578" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 </head>
 
 <body>
@@ -176,13 +194,6 @@
   <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js" ></script>
   <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js" ></script>
   <script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js" ></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-<!--  <script>-->
-<!--    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;-->
-<!--    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')-->
-<!--  </script>-->
-<!--  <script src="https://www.google-analytics.com/analytics.js" async defer></script>-->
 
 </body>
 
