--- a/quix/index.html
+++ b/quix/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Quix.</title>
+  <title>Quix</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- For Google -->
   <meta name="description" content="A website that lets you conveniently browse movies and their IMDB-ratings. Additionally, you can save your favourites permanently and come back to them whenever you please!" />
   <meta name="author" content="Tarek Bermalm" />
   <meta name="copyright" content="" />
-  <meta name="application-name" content="Quix." />
+  <meta name="application-name" content="Quix" />
 
   <!-- For Facebook -->
   <meta property="og:title" content="Quix - quickly search IMDB">
@@ -127,7 +127,7 @@
       <img id="logo" src="img/popcorn-1614707.png" alt="Logo">
 
         <div id="title-container">
-          <span id="title">Quix.</span>
+          <span id="title">Quix</span>
         </div>
         <div id="subtitle-flex-container">
           <span id="subtitle">Quickly index IMDB</span>
