--- a/quix/index.html
+++ b/quix/index.html
@@ -180,8 +180,8 @@
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
-  <script type="module" async src="js/main.js" type="text/javascript"></script>
-  <script src="js/dataAccessLayer.js" type="text/javascript"></script>
+  <script type="module" async src="js/main.js" type="text/javascript" defer></script>
+  <script src="js/dataAccessLayer.js" type="text/javascript" defer></script>
   
   
   <!-- 
