--- a/home-page/index.html
+++ b/home-page/index.html
@@ -7,13 +7,21 @@
 	<meta bname="description" content="">
 	<meta name="author" content="">
 
-	<title>Home</title>
+	<!-- https://realfavicongenerator.net/favicon_result?file_id=p1f97tbkg3kj6102ud2qo631i8d6 -->
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="manifest" href="site.webmanifest">
+	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="lib/bootstrap.min.css" rel="stylesheet">
 	<link href="./style/main.css" rel="stylesheet">
+	<title>Home</title>
 </head>
 
 <body>
