--- a/home-page/index.html
+++ b/home-page/index.html
@@ -63,6 +63,12 @@
 					<span>Reddit</span>
 				</a>
 			</div>
+			<div>
+				<a href="https://keep.google.com">
+					<i class="fas fa-lightbulb"></i>
+					<span>Keep</span>
+				</a>
+			</div>
 		</div>
 		<script src="flow-field/assets/p5.min.js"></script>
 		<script src="flow-field/assets/index.js"></script>
