--- a/home-page/index.html
+++ b/home-page/index.html
@@ -31,7 +31,7 @@
 		<h2 class="date"></h2>
 
 		<div class="search">
-			<form action="https://google.com/" method="get" target="_self" autocomplete="off">
+			<form action="https://www.google.com/search?q=" method="get" target="_self" autocomplete="off">
 				<input type="text" name="q" placeholder="Search" autofocus="autofocus" onfocus="this.select()">
 			</form>
 		</div>
